[gd_scene load_steps=4 format=3 uid="uid://bsevkqk7cl15l"]

[ext_resource type="Script" path="res://Scripts/Slot/SlotDetector.gd" id="1_61rwx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7u6n"]
size = Vector2(1, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_sikk0"]

[node name="SlotDetector" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_61rwx")
m_size = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(100, 100)
shape = SubResource("RectangleShape2D_i7u6n")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
self_modulate = Color(1, 1, 1, 0.392157)
texture = SubResource("CanvasTexture_sikk0")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
